[GTK] ASSERT bug in WebAudio (AudioFileReader) https://bugs.webkit.org/show_bug.cgi?id=81777

Reviewed by Martin Robinson.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::decodeAudioForBusCreation): Don't steal
the GstBus floating reference.
(WebCore::AudioFileReader::createBus): Ditto.

Canonical link: https://commits.webkit.org/99199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111706 268f45cc-cd09-0410-ab3c-d52691b4dbfc